# memoryporter

./: .gitignore  AGENTS.md  AGENTS.template.md  AGENT_MAP.md  AOS_report.md  CLAUDE.md  README.md  bootstrap.sh  mempalace.yaml
conventions/: FOR_AGENTS.md  MANIFEST.json  (+1 more)
kb-forge/: README.md  help_output2.txt  pyproject.toml
kb-forge/agents/: __init__.py
kb-forge/agents/team-prompts/: consensus-facilitator.md  implementer-architect.md  implementer-craftsman.md
kb-forge/skills/: __init__.py
kb-forge/src/kb_forge/: __init__.py  __main__.py  cli.py  context_engine.py  kb_index.py  mcp_server.py  scraper.py  storage.py
kb-forge/src/kb_forge/agents/: __init__.py
kb-forge/src/kb_forge/backends/: __init__.py  chroma.py  hybrid.py  markdown.py  obsidian.py
kb-forge/tests/: __init__.py  test_advanced_backends.py  test_cli.py  test_context_engine.py  test_harness.py  test_kb_index.py  test_mcp_server.py  test_scraper.py  test_storage.py
kb-forge/ui/: README.md  design.md  main.py  server.py
kb-forge/ui/static/: app.js  style.css
kb-forge/ui/templates/: index.html
kb-forge/ui/wireframes/: overview.txt
runtime/crates/claw-gateway/: Cargo.toml
runtime/crates/claw-gateway/src/: lib.rs  main.rs  persistence.rs  state.rs
runtime/crates/claw-gateway/tests/: gateway_tests.rs
runtime/crates/mini-runtime/: Cargo.toml
runtime/crates/mini-runtime/src/: anthropic.rs  compaction.rs  hooks.rs  lib.rs  main.rs  permissions.rs  runtime.rs  session.rs  tools.rs  traits.rs
runtime/crates/ob1-runtime/: Cargo.toml  README.md
runtime/crates/ob1-runtime/src/: agents.rs  anthropic.rs  audit.rs  boot.rs  budget.rs  compaction.rs  doctor.rs  events.rs  lib.rs  main.rs  memory.rs  permissions.rs  provenance.rs  registry.rs  runtime.rs  session.rs  skills.rs  streaming.rs  tools.rs  verify.rs  workflow.rs
runtime/crates/ob1-runtime/tests/: anthropic_tests.rs  tools_tests.rs
tools/wapt/: .gitignore  AGENTS.md  BLUEPRINT.md  CLAUDE.md  PROJECT.md  ROADMAP.md  START_HERE.md  pyproject.toml
tools/wapt/.agent/: config.yaml  identity.md
tools/wapt/caddy/: Caddyfile
tools/wapt/references/: caddy-admin-api.md  caddy-windows-install.md  contract-testing-light.md  devcontainer-patterns.md  github-pages-patterns.md  health-check-patterns.md  heroku-cli-auth.md  jetbrains-external-tools.md  jinja2-caddyfile.md  localhost-rfc-behavior.md  mkcert-windows-gotchas.md  pack-spec-conformance.md  playwright-python.md  pydantic-v2-patterns.md  pyproject-extras.md  pytest-coverage.md  rich-tables.md  sentry-js-sdk.md  typer-patterns.md  uv-tool-install.md  windows-subprocess.md
tools/wapt/src/wapt/: __init__.py  __main__.py  caddy_wrapper.py  caddyfile_stamper.py  cli_core.py  config_validation.py  contract_tests.py  doctor_command.py  error_library.py  health_check.py  mkcert_integration.py  site_registry.py
tools/wapt/templates/: site.caddy
tools/wapt/tests/: conftest.py
tools/wapt/tests/fixtures/: caddy_schema_snapshot.json  ecc-api-probe.html
tools/wapt/tests/integration/: test_cli_e2e.py
tools/wapt/tests/unit/: test_caddy_wrapper.py  test_caddyfile_stamper.py  test_cli_core.py  test_config_validation.py  test_contract_tests.py  test_doctor_command.py  test_error_library.py  test_health_check.py  test_mkcert_integration.py  test_site_registry.py
(+745 files in other folders)
