[project]
name = "kb-forge"
version = "0.1.0"
description = "Knowledge Base Forge — Multi-agent system for scraping and structuring docs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "fastmcp>=0.4.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ruff>=0.4.0",
]

[project.scripts]
kb-forge = "kb_forge.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
