[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wapt"
version = "0.1.0.dev0"
description = "Caddy + mkcert wrapper for local HTTPS dev"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12.0",
    "pydantic>=2.0.0",
    "jinja2>=3.1.0",
    "httpx>=0.27.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[project.scripts]
wapt = "wapt.cli_core:app"

[tool.hatch.build.targets.wheel]
packages = ["src/wapt"]

[tool.hatch.build.targets.wheel.force-include]
"templates" = "wapt/templates"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"src/wapt/caddyfile_stamper.py" = ["S701"]
