[package]
name = "claw-gateway"
version = "0.1.0"
edition = "2021"

[lib]
name = "claw_gateway"
path = "src/lib.rs"

[[bin]]
name = "claw-gateway"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5", features = ["cors"] }
ob1-runtime = { path = "../ob1-runtime" }

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"
